<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>

        <import type="android.view.View" />

        <variable
            name="callback"
            type="edu.aku.hassannaqvi.kmc_screening.ui.F3Activity" />
    </data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.form1.F3Activity">


        <LinearLayout
            android:id="@+id/fldGrpF3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:orientation="vertical">


            <!--f3wgq1-->
            <android.support.v7.widget.CardView style="@style/cardView">


                <LinearLayout style="@style/linearlayout_view_wt_bound">

                    <TextView
                        style="@style/i_textview"
                        android:text="@string/f3wgq1" />


                    <LinearLayout
                        android:tag="0"
                        android:id="@+id/f3wgq1check"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <CheckBox
                            android:id="@+id/f3wgq1a"
                            style="@style/checkbox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/f3wgq1a" />

                        <CheckBox
                            android:id="@+id/f3wgq1b"
                            style="@style/checkbox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/f3wgq1b" />

                        <CheckBox
                            android:id="@+id/f3wgq1c"
                            style="@style/checkbox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/f3wgq1c" />

                        <CheckBox
                            android:id="@+id/f3wgq1d"
                            style="@style/checkbox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/f3wgq1d" />

                        <CheckBox
                            android:id="@+id/f3wgq1e"
                            style="@style/checkbox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/f3wgq1e" />

                        <CheckBox
                            android:id="@+id/f3wgq1f"
                            style="@style/checkbox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/f3wgq1f" />

                        <CheckBox
                            android:id="@+id/f3wgq1g"
                            style="@style/checkbox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/f3wgq1g" />

                        <CheckBox
                            android:id="@+id/f3wgq1h"
                            style="@style/checkbox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/f3wgq1h" />

                        <CheckBox
                            android:id="@+id/f3wgq1i"
                            style="@style/checkbox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/f3wgq1i" />

                        <CheckBox
                            android:id="@+id/f3wgq1j"
                            style="@style/checkbox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/f3wgq1j" />

                        <CheckBox
                            android:id="@+id/f3wgq1k"
                            style="@style/checkbox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/f3wgq1k" />




                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>


            <!--f3wgq2-->
            <android.support.v7.widget.CardView style="@style/cardView">


                <LinearLayout style="@style/linearlayout_view_wt_bound">

                    <TextView
                        style="@style/i_textview"
                        android:text="@string/f3wgq2" />


                    <com.edittextpicker.aliazaz.EditTextPicker
                        android:id="@+id/f3wgq2"
                        style="@style/textInput"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/number"
                        android:maxLength="2"
                        app:maxValue="60"
                        app:minValue="1"
                        app:type="range" />
                </LinearLayout>
            </android.support.v7.widget.CardView>


            <!--f3wgq3-->
            <android.support.v7.widget.CardView style="@style/cardView">


                <LinearLayout style="@style/linearlayout_view_wt_bound">

                    <TextView
                        style="@style/i_textview"
                        android:text="@string/f3wgq3" />



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:tag="0"

                    >

                        <CheckBox
                            android:id="@+id/f3wgq3a"
                            style="@style/radiobutton"
                            android:text="@string/f3wgq3a" />

                        <CheckBox
                            android:id="@+id/f3wgq3b"
                            style="@style/radiobutton"
                            android:text="@string/f3wgq3b" />
                        <CheckBox
                            android:id="@+id/f3wgq3c"
                            style="@style/radiobutton"
                            android:text="@string/f3wgq3c" />

                        <CheckBox
                            android:id="@+id/f3wgq396"
                            style="@style/radiobutton"
                            android:text="@string/f3wgq396" />

                </LinearLayout>
                        <EditText
                            android:id="@+id/f3wgq396x"
                            style="@style/textInput"
                            android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                            android:hint="@string/other"
                            android:inputType="text"
                            android:tag="f2a0496"
                            android:visibility='@{f3wgq396.checked? View.VISIBLE : View.GONE}'
                            android:text='@{f3wgq396.checked? f3wgq396x.getText.toString : ""}' />





                </LinearLayout>
            </android.support.v7.widget.CardView>





            <!--f3wgq4-->
            <android.support.v7.widget.CardView style="@style/cardView">


                <LinearLayout style="@style/linearlayout_view_wt_bound">

                    <TextView
                        style="@style/i_textview"
                        android:text="@string/f3wgq4" />

                    <RadioGroup
                        android:id="@+id/f3wgq4"
                        style="@style/radiogroup">

                        <RadioButton
                            android:id="@+id/f3wgq4a"
                            style="@style/radiobutton"
                            android:text="@string/f3wgq4a" />

                        <RadioButton
                            android:id="@+id/f3wgq4b"
                            style="@style/radiobutton"
                            android:text="@string/f3wgq4b" />
                        <RadioButton
                            android:id="@+id/f3wgq4c"
                            style="@style/radiobutton"
                            android:text="ٽيون" />




                    </RadioGroup>


                </LinearLayout>
            </android.support.v7.widget.CardView>




            <!--  = = = = =  END OF FORM FIELDS  = = = = = -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_Continue"
                    style="@style/button"
                    android:onClick="@{() -> callback.BtnContinue()}"
                    android:text="@string/nextSection" />

                <Button
                    android:id="@+id/btn_End"
                    style="@style/button"
                    android:layout_marginRight="10dp"
                    android:onClick="@{() -> callback.BtnEnd()}"
                    android:text="@string/end_interview" />

                <!--'onClick' for btn_End will NOT change and always call 'endInterview'-->
            </LinearLayout>


        </LinearLayout>

    </ScrollView>
</layout>
